# rust-pcn

./: .gitignore  ARCHITECTURE.md  AUDIT-REPORT.md  CHANGES-V2.md  Cargo.toml  DEPTH-ANALYSIS.md  IMAGE-PCN-DESIGN.md  PHASE2_TESTS.md  PHASE3_IMPLEMENTATION.md  README.md  SKILL.md  TEST_SUMMARY.md  rustfmt.toml
benches/: pcn_bench.rs
dashboard/: package-lock.json  package.json
dashboard/src/: data-reader.ts  index.ts  layout.ts  types.ts
docs/: commonjs-pcn-reference.js  implementation-notes.md  multimodal-pcn-research.md  pcn-video-transcript.md
k8s/: build-pod.yaml  pcn-image-train.yaml  pcn-train-v2.yaml  pcn-train.yaml
scripts/: convert-datasets.py  download-cifar10.sh  download_books.sh  html_to_training.py  infer_and_visualize.py  infer_pure.py
src/: checkpoint.rs  lib.rs  pool.rs
src/core/: mod.rs
src/data/: image.rs  mod.rs  samples.rs  vocab.rs
src/gpu/: convert.rs  mod.rs  tensors.rs
src/training/: mod.rs
src/utils/: mod.rs
tests/: README.md  energy_tests.rs  integration_tests.rs  tanh_tests.rs
