[package]
name = "pcn"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.16"
ndarray-rand = "0.15"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
# For BLAS (optional, for performance)
# ndarray-linalg = { version = "0.16", features = ["openblas-static"] }

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
