[package]
name = "pcn"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[dependencies]
ndarray = "0.16"
ndarray-rand = "0.15"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
burn = { version = "0.16", features = ["wgpu", "ndarray"] }
# For BLAS (optional, for performance)
# ndarray-linalg = { version = "0.16", features = ["openblas-static"] }

[[bin]]
name = "pcn-train"
path = "src/bin/train.rs"

[[bin]]
name = "pcn-generate"
path = "src/bin/generate.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"

[[bench]]
name = "pcn_bench"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
opt-level = 3
