[package]
name = "pcn"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

[dependencies]
ndarray = "0.16"
ndarray-rand = "0.15"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
# For BLAS (optional, for performance)
# ndarray-linalg = { version = "0.16", features = ["openblas-static"] }

[[bin]]
name = "pcn-train-image"
path = "src/bin/train_image.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"

[[bench]]
name = "pcn_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
